# clinreport

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  audit_model.md  reviewer_workflow.md
src/clinreport/: cli.py  config.py  exceptions.py  logging_utils.py  provenance.py
src/clinreport/core/: models.py
src/clinreport/evidence_mapping/: engine.py
src/clinreport/igv/: batch.py  naming.py  runner.py
src/clinreport/llm/: grounding.py  openai_triage.py  packet_generator.py  report_interpretation.py  schema.py  validators.py
src/clinreport/qc/: fastq_qc.py  fastq_variants.py
src/clinreport/report/: render.py
src/clinreport/report/templates/: report.html.j2  style.css
src/clinreport/resources/gene_panels/: acmg_sf_example.txt
src/clinreport/review/: audit.py  routing.py  signoff.py
src/clinreport/technical_review/: authenticity_engine.py
src/clinreport/vcf/: clinvar.py  io.py  normalize.py  rules.py
tests/: test_igv_batch.py  test_report_context.py  test_rules.py
tests/evidence_mapping/: test_engine.py
tests/integration/: test_review_flow.py
tests/llm/: test_packet_generator.py
tests/review/: test_signoff.py
tests/technical_review/: test_authenticity_engine.py
