[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "clinreport"
version = "0.1.0"
description = "Local clinical variant report generator with IGV snapshot review bundle"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "jinja2>=3.1.3",
  "weasyprint>=61.0",
  "pandas>=2.2.0",
  "cyvcf2>=0.31.0",
  "rich>=13.7.0",
  "python-dateutil>=2.9.0",
  "openai>=1.40.0",
]

[project.scripts]
clinreport = "clinreport.cli:app"

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
